feat: complete issue 15 statistics queries
Closes #15
